# veloinfo

./: .claudeignore  .dockerignore  .gitignore  .goosehints  Cargo.toml  Dockerfile  Modelfile-dev  README.md  build.rs  deploy.sh  docker-compose.yaml  flake.nix  import.lua  import.sh  import_srtm.sh  index.js  package-lock.json  package.json  plan.md  shell.nix
.github/workflows/: build-docker-image.yml  docker-image.yml
android/: .gitignore  app-release-bundle.aab  app-release-signed.apk.idsig  cert.der  twa-manifest.json
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/quebec/veloinfo/twa/: Application.java  DelegationService.java  LauncherActivity.java
android/app/src/main/res/raw/: web_app_manifest.json
android/app/src/main/res/values/: strings.xml
custom-elements/: ChangeStart.js  FollowPanel.js  PointPanel.js  RouteDefine.js  RoutePanel.js  RouteSearching.js  SearchInput.js  SegmentPanel.js  VeloinfoInstallIos.js  VeloinfoMenu.js  vi-change-start.js  vi-context.js  vi-follow-panel.js  vi-info.js  vi-install-android.js  vi-install-ios.js  vi-layers.js  vi-main.js  vi-menu.js  vi-mobilizon-events.js  vi-photo-scroll.js  vi-point-panel.js  vi-reply-form.js  vi-route-define.js  vi-route-panel.js  vi-route-searching.js  vi-search-input.js  vi-search-result.js  vi-segment-panel.js
custom-elements/test/: test-distance-to-route.mjs  test-follow-panel.mjs  test-galt.mjs  test-long-segment.mjs  test-stagnation.mjs  test-turn-90.mjs  test-turn-back.mjs
db/: Dockerfile  initdb-postgis.sh
migrations/: 20241027210351_create_road_work.sql  20250203131112_create_cities_snow_on_ground.sql  20250917100049_alter_road_work_geom_to_geometry.sql  20250930202449_add_snow_to_city.sql  20250930202839_delete_snow_on_ground.sql  20251005123130_city_snow.sql  20260204000000_srtm_elevation.sql  20260204000001_populate_edge_elevations.sql  20260508171651_geom_as_primary_for_custom_segments.sql  20260509000000_uniformize_cyclability_score_srid.sql  20260617200717_rename_cyclability_score_to_report.sql  20260617210000_add_parent_comment_id.sql  20260619180000_add_user_name_photo_to_report_comment.sql  20260619200000_add_enabled_to_report.sql  20260620000000_report_geom_3857.sql  20260622130000_report_comment_user_id.sql
pub/: confidentialite.html  service-worker.js  veloinfo.css  webmanifest.json
pub/components/: veloinfo-contributions.js
src/: auth.rs  main.rs  score_selector_controler.rs
src/component/: bike_path.rs  follow_panel.rs  index_js.rs  info_panel.rs  layers.rs  mod.rs  photo_scroll.rs  point_panel.rs  route_panel.rs  score_circle.rs  score_selector.rs  search.rs  segment_panel.rs  style.rs
src/db/: city_snow.rs  cyclability_score.rs  cycleway.rs  edge.rs  mod.rs  report.rs  report_comment.rs  road_work.rs  search_db.rs  user.rs  utils.rs
src/utils/: cost.rs  elevation.rs  h.rs  import.rs  mod.rs  mtl.rs  proxy.rs
templates/: follow_panel.html  index.html  index.js  info_panel.html  info_panel_contribution.html  layers.html  menu.html  photo_scroll.html  point_panel.html  route_panel.html  search.html  search_result.html  segment_panel.html  style.json
web-components/: BikePath.js  ChangeStart.js  FollowPanel.js  MapDiv.js  MobilizonEvents.js  PointPanel.js  RouteDefine.js  RoutePanel.js  RouteSearching.js  SearchInput.js  SegmentPanel.js  SnowPanel.js  VeloinfoInstallAndroid.js  VeloinfoInstallIos.js  VeloinfoMap.js  VeloinfoMenu.js  vi-info.js
well-known/: assetlinks.json
