[package]
name = "veloinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.9", features = ["multipart"] }
axum-extra = { version = "0.9.6", features = ["cookie", "typed-header"] }
axum-macros = "0.4.2"
chrono = { version = "0.4.39", features = ["unstable-locales"] }
chrono-tz = "0.9.0"
futures = "0.3.31"
geo = { version = "0.29.3", features = ["serde"] }
geojson = "0.24.1"
geozero = { version = "0.14.0", features = ["with-postgis-sqlx"] }
image = "0.25.5"
lazy_static = "1.5.0"
libheif-rs = "1.0.2"
pathfinding = "4.13.0"
postgres = "0.19.9"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "chrono", "uuid", "time"] }
time = { version = "0.3.37", features = ["formatting"] }
timeago = "0.4.2"
tokio = { version = "1.42.0", features = ["full"] }
tokio-cron-scheduler = "0.10.2"
tower-http = { version = "0.5.2", features = ["fs", "trace", "cors"] }
tower-livereload = "0.9.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dependencies.uuid]
version = "1.11.0"
features = [
    "v7",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
[profile.dev.package.sqlx-macros]
opt-level = 3
