[package]
name = "veloinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
askama = { version = "0.14.0"}
askama_web = {version = "0.14.0", features = ["axum-0.8"]}
axum = { version = "0.8.4", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
chrono = { version = "0.4.41", features = ["unstable-locales"] }
chrono-tz = "0.9.0"
futures = "0.3.31"
geo = { version = "0.29.3", features = ["serde"] }
geojson = "0.24.2"
geozero = { version = "0.14.0", features = ["with-postgis-sqlx"] }
image = "0.25.6"
lazy_static = "1.5.0"
libheif-rs = "1.1.0"
once_cell = "1.21.3"
pathfinding = "4.14.0"
postgres = "0.19.10"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "chrono", "uuid", "time"] }
time = { version = "0.3.41", features = ["formatting"] }
timeago = "0.4.2"
tokio = { version = "1.47.0", features = ["full"] }
tokio-cron-scheduler = "0.10.2"
tower-http = { version = "0.5.2", features = ["fs", "trace", "cors"] }
tower-livereload = "0.9.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dependencies.uuid]
version = "1.17.0"
features = [
    "v7",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
[profile.dev.package.sqlx-macros]
opt-level = 3
